search pseudo funzionante

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,9 +5,15 @@
 
   <div class="container">
     <div class="row">
+      @if(searchQuery){
+      <div class="" col-12 col-md-4 *ngFor="let todo of filtered">
+        <app-card [todo]="todo"></app-card>
+      </div>
+      }@else {
       <div class="" col-12 col-md-4 *ngFor="let todo of todoArr">
         <app-card [todo]="todo"></app-card>
       </div>
+      }
     </div>
   </div>
 </section>
