--- a/src/app/components/completed/completed.component.html
+++ b/src/app/components/completed/completed.component.html
@@ -1,3 +1,4 @@
+<h1>In questa pagina troverai gli users e i loro task eventuali</h1>
 <section class="completed">
   <div class="container">
     <div class="row">
